# ChangeLog for net-analyzer/smokeping
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/smokeping/ChangeLog,v 1.11 2007/07/29 16:59:40 phreak Exp $

  29 Jul 2007; Christian Heim <phreak@gentoo.org> smokeping-2.0.9.ebuild:
  Fixing the DEPEND/RDEPEND for the move of net-www/apache to
  www-servers/apache (#78622).

  17 May 2007; Luca Longinotti <chtekk@gentoo.org> smokeping-2.0.9.ebuild:
  Fix bug #157690.

  14 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  01 May 2007; Marius Mauch <genone@gentoo.org> smokeping-2.0.9.ebuild:
  Replacing einfo with elog

  28 Apr 2007; Torsten Veller <tove@gentoo.org> smokeping-2.0.9.ebuild:
  Use newinitd

  17 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  smokeping-2.0.9.ebuild:
  Stable on sparc

  13 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  smokeping-2.0.9.ebuild:
  Keyworded ~sparc wrt #168808

  09 Oct 2006; Luca Longinotti <chtekk@gentoo.org> smokeping-2.0.9.ebuild:
  Fix bug #150559.

  20 Sep 2006; <blubb@gentoo.org> smokeping-2.0.9.ebuild:
  stable on amd64

  20 Sep 2006; Joshua Jackson <tsunam@gentoo.org> smokeping-2.0.9.ebuild:
  Stable x86; bug #148231

*smokeping-2.0.9 (09 Aug 2006)

  09 Aug 2006; Luca Longinotti <chtekk@gentoo.org> +files/78_smokeping.conf,
  +files/config.dist, +files/smokeping.init, +metadata.xml,
  +smokeping-2.0.9.ebuild:
  Add package, closes bug #66980. Thanks to Lee Thompson and Steve Clement for
  the initial ebuild.
