@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/smokeping
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/smokeping/ChangeLog,v 1.11 2007/07/29 16:59:40 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/smokeping/ChangeLog,v 1.12 2007/09/13 19:49:55 hansmi Exp $
+
+  13 Sep 2007; Michael Hanselmann <hansmi@gentoo.org>
+  smokeping-2.0.9.ebuild:
+  Fix website and source URL, bug #183711.
 
   29 Jul 2007; Christian Heim <phreak@gentoo.org> smokeping-2.0.9.ebuild:
   Fixing the DEPEND/RDEPEND for the move of net-www/apache to
